// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should render external link without error 1`] = `
<div>
  <a
    class="font-bold text-teal-500 hover:text-teal-800 extra-link-class"
    data-testid="externalLinkId"
    href="https://external.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    External Link
  </a>
</div>
`;

exports[`<Link /> should render internal link without error 1`] = `
<div>
  <a
    class="font-bold text-teal-500 hover:text-teal-800 extra-link-class"
    data-testid="internalLinkId"
    href="/login"
  >
    Internal Link
  </a>
</div>
`;
